Modified Unity textures

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ Unity/ISS/Library/
 Unity/ISS/Logs/
 Unity/ISS/Packages/
 Unity/ISS/ProjectSettings/
+Unity/ISS/Temp
 Unity/ISS/UserSettings/
 Scripts/
 *.sauv*
